--- a/LaTeX/references.bib
+++ b/LaTeX/references.bib
@@ -194,3 +194,15 @@ title = {SPEA2: Improving the Strength Pareto Evolutionary Algorithm},
 volume = {103},
 journal = {TIK-Report}
 }
+
+@article{wang_pso,
+  title={Particle swarm optimization algorithm: an overview},
+  author={Wang, Dong and Tan, Dapei and Liu, Lei},
+  journal={Soft Computing},
+  volume={22},
+  number={2},
+  pages={387--408},
+  year={2018},
+  url={https://doi.org/10.1007/s00500-016-2474-6},
+  publisher={Springer}
+}
