--- a/LaTeX/report.tex
+++ b/LaTeX/report.tex
@@ -58,21 +58,21 @@ jd01606@surrey.ac.uk}
 \maketitle
 
 \begin{abstract}
-Large language models (LLMs) have been growing in usage over the years for various purposes such as text generation, translation and understanding the semantic meaning behind a corpus. Transformers which serve as the underlying backbone of many of these large language models are becoming increasingly harder to finetune for optimal performance through standard techniques such as data augmentation, regularization and discriminative fine tuning (applying different learning rates to each layer of the model), ultimately leading to the model becoming overconfident and having hallucinations due to the vast number of parameters being required to control. We propose LoRA (Low-Rank Adaptation), an algorithm which for a given task [1], adapts a foundation model by freezing the weights and injecting trainable rank decomposition matrices into each layer. We will be using LoRA on the DistilBERT foundation model for the downstream task of text classification on a dataset of tweets representing various emotions within their semantic meanings as well as discussing the various approaches a foundation model can use to find optimal hyperparameters through both evolutionary \& metaheuristic algorithms such that overall, we aim to improve the overall confidence score of the foundation model when performing sentiment analysis on a dataset of tweets expressing six different emotions.
+Large language models (LLMs) have been growing in usage over the years for various purposes such as text generation, translation and understanding the semantic meaning behind a corpus. Transformers which serve as the underlying backbone of many of these large language models are becoming increasingly harder to finetune for optimal performance through standard techniques such as data augmentation, regularisation and discriminative fine tuning (applying different learning rates to each layer of the model), ultimately leading to the model becoming overconfident and having hallucinations due to the vast number of parameters being required to control. We propose LoRA (Low-Rank Adaptation), an algorithm which for a given task ~\cite{ibm_watson}, adapts a foundation model by freezing the weights and injecting trainable rank decomposition matrices into each layer. We will be using LoRA on the DistilBERT foundation model for the downstream task of text classification on a dataset of tweets representing various emotions within their semantic meanings as well as discussing the various approaches a foundation model can use to find optimal hyperparameters through both evolutionary \& metaheuristic algorithms such that overall, we aim to improve the overall confidence score of the foundation model when performing sentiment analysis on a dataset of tweets expressing six different emotions.
 \end{abstract}
 
 \setcounter{section}{0}
 \section{Introduction}
-Emotion classification in text using sentiment analysis is a core challenge within natural language processing, with this downstream task being applied to mental health monitoring, social media analysis and customer service automation such that being able to accurately understand and classify emotional expressions in short text such as tweets, enables AI models to be able to better respond to user’s needs, specifically in critical scenarios such as detecting possible signals of a distressed user on such social platforms. Foundation models have owed their success to sophisticated pre-training objectives and huge model parameters. Foundation models can effectively capture knowledge from massive amounts of labeled and unlabelled data since the rich knowledge is implicitly encoded in the huge number of parameters that benefits a variety of downstream tasks, demonstrated via experimental verification and empirical analysis. Due to the increase in computational power boosted by the wide use of distributed computing devices and strategies, we can further advance the parameter scale of foundation models from million-level to billion-level and in some cases even a trillion-level. However, training these models from scratch or performing full fine-tuning at every layer requires a lot of computational and financial resources with some costing tens of millions of dollars to train [2] which is impractical for resource-constrained environments. A solution to this is using parameter-efficient fine-tuning methods such as LoRA (Low-Rank Adaptation) which allows selective adaptation of pre-trained models with minimal computational overhead through trainable low-rank matrices whilst keeping the base model frozen and therefore reducing the overall number of hyperparameters from the base model.
+\noindent Emotion classification in text using sentiment analysis is a core challenge within natural language processing, with this downstream task being applied to mental health monitoring, social media analysis and customer service automation such that being able to accurately understand and classify emotional expressions in short text such as tweets, enables AI models to be able to better respond to user’s needs, specifically in critical scenarios such as detecting possible signals of a distressed user on such social platforms. Foundation models have owed their success to sophisticated pre-training objectives and huge model parameters. Foundation models can effectively capture knowledge from massive amounts of labelled and unlabelled data since the rich knowledge is implicitly encoded in the huge number of parameters that benefits a variety of downstream tasks, demonstrated via experimental verification and empirical analysis. Due to the increase in computational power boosted by the wide use of distributed computing devices and strategies, we can further advance the parameter scale of foundation models from million-level to billion-level and in some cases even a trillion-level. However, training these models from scratch or performing full fine-tuning at every layer requires a lot of computational and financial resources with some costing tens of millions of dollars to train ~\cite{lora_xs} which is impractical for resource-constrained environments. A solution to this is using parameter-efficient fine-tuning methods such as LoRA (Low-Rank Adaptation) which allows selective adaptation of pre-trained models with minimal computational overhead through trainable low-rank matrices whilst keeping the base model frozen and therefore reducing the overall number of hyperparameters from the base model.
 
 Although LoRA improves the model’s efficiency and the problem of overfitting through reducing the number of hyperparameters, its performance is highly sensitive to these changes within the configuration of hyperparameters such that the choice of rank, alpha scaling factor, learning rate and other training hyperparameters can affect the model’s performance. If one resorts to using manual hyperparameter tuning algorithms such as Grid Search then not only is this slow but the search space will not be fully explored and hence this challenge of correctly choosing an efficient hyperparameter 
 fine-tuning method is critical for emotion classification tasks in order for the model to capture linguistic patterns across a range of emotions.
 
-This paper presents our research into using the LoRA fine-tuning algorithm to optimize an emotion classification system built using the foundation model DistilBERT where we utilize the emotion dataset, containing tweets across six distinct emotional categories. We aim to finetune DistilBERT by adapting it’s classification head for our task of text classification and then using LoRA combined with metaheuristic and evolutionary optimization algorithms to then evaluate the performance of the model.
+This paper presents our research into using the LoRA fine-tuning algorithm to optimise an emotion classification system built using the foundation model DistilBERT where we utilise the emotion dataset, containing tweets across six distinct emotional categories. We aim to fine-tune DistilBERT by adapting its classification head for our task of text classification and then using LoRA combined with metaheuristic and evolutionary optimisation algorithms to then evaluate the performance of the model.
 
 \section{Literature Review}
 
-As larger foundation models are trained every few months, the technique of fine-tuning, which updates all parameters of a pre-trained model, becomes a critical deployment challenge, \emph{e.g.}, GPT-3 ~\cite{gpt3} with 175 billion parameters. The need for efficient approaches becomes a requirement in the field of transformer fine-tuning.
+\noindent As larger foundation models are trained every few months, the technique of fine-tuning, which updates all parameters of a pre-trained model, becomes a critical deployment challenge, \emph{e.g.}, GPT-3 ~\cite{gpt3} with 175 billion parameters. The need for efficient approaches becomes a requirement in the field of transformer fine-tuning.
 
 Adapter tuning ~\cite{adapter_tuning} is an early approach to address this challenge. The approach inserts 'adapter' modules that have a bottleneck architecture between layers in the Pre-Trained Models (PTMs) and only these modules get updated during fine-tuning. On the other hand, an approach like BitFit ~\cite{bitfit} updates only the biases in foundation models while freezing the rest of the other modules. These methods, while effective, tend to constrain where and how the adaptation occurs, which can end up either potentially introducing inference latency, or reducing the expressive capacity of the model for complex tasks.
 
@@ -100,9 +100,9 @@ Some traditional methods of hyperparameter optimisation include grid search, ran
 
 %Bayesian optimization relies on the notion of proximity and smoothness in a continuous space that is naturally captured by a common Gaussian Process, hence the failure to accurately optimise discrete variables. Additionally, the structural dependency in LoRA (where changing target modules alters the model architecture) would violate the smooth function assumption underlying most Bayesian optimization approaches (where points close to each other in the input space will have similar output values).
 
-For these problems, meta-heuristic algorithms provide an appealing alternative strategy. Because they can naturally handle both discrete and continuous variable types, population-based techniques like the Genetic Algorithm (GA) ~\cite{holland_ga}, Differential Evolution (DE) ~\cite{das_de}, and Particle Swarm Optimization (PSO) ~\cite{wang_pso} are especially attractive. Importantly, they can simultaneously explore several regions of the search space and do not require any assumptions regarding the smoothness or differentiability of the objective function. These features make them appealing for costly black-box optimization problems like hyperparameter tuning in LoRA, where every evaluation requires a complete model training run, which is computationally expensive.
+For these problems, meta-heuristic algorithms provide an appealing alternative strategy. Because they can naturally handle both discrete and continuous variable types, population-based techniques like the Genetic Algorithm (GA) ~\cite{holland_ga}, Differential Evolution (DE) ~\cite{das_de}, and Particle Swarm Optimisation (PSO) ~\cite{wang_pso} are especially attractive. Importantly, they can simultaneously explore several regions of the search space and do not require any assumptions regarding the smoothness or differentiability of the objective function. These features make them appealing for costly black-box optimisation problems like hyperparameter tuning in LoRA, where every evaluation requires a complete model training run, which is computationally expensive.
 
-While focused on a Convolutional Neural Network's (CNN) hyperparameters, the recent study by [] provides a valuable insight. Despite the differences in the base model (DistilBERT in our study), the authors found that the algorithms' efficiency was greatly increased by incorporating domain knowledge about valid architectures into the meta-heuristics, mainly through the design of the architecture encoding (e.g., defining search space boundaries and utilizing modular building blocks). When defining the search space for LoRA hyperparameters in Transformer models, it will be crucial to explore how we can incorporate domain knowledge into the meta-heuristics to ensure that DistilBERT can be fine-tuned efficiently.
+While focused on a Convolutional Neural Network's (CNN) hyperparameters, the recent study by [] provides a valuable insight. Despite the differences in the base model (DistilBERT in our study), the authors found that the algorithms' efficiency was greatly increased by incorporating domain knowledge about valid architectures into the meta-heuristics, mainly through the design of the architecture encoding (e.g., defining search space boundaries and utilising modular building blocks). When defining the search space for LoRA hyperparameters in Transformer models, it will be crucial to explore how we can incorporate domain knowledge into the meta-heuristics to ensure that DistilBERT can be fine-tuned efficiently.
 
 \textbf{[CHECK]}On the other hand, a study by [] compared Differential Evolution (DE), GA, and PSO, and found that DE demonstrated the best performance. The authors concluded that DE's effective ability to balance exploration and exploitation of the search space led to superior optimal solutions, contrasting with PSO's higher risk of premature convergence and GA's slower convergence and limitations for complex hyperparameter configurations.
 
@@ -112,9 +112,9 @@ Overall, it is clear that there are many ways in which parameter-efficient fine-
 
 \subsection{Problem Representation}
 
-A chromosome (candidate solution) is represented as a vector $G = [g_1, g_2, \dots, g_6]$. The learning rate ($g_1$) is encoded directly as a continuous float. The remaining five discrete parameters are encoded as integer indices pointing to a pre-defined list of valid options. For example, if the valid Ranks are $\{2, 4, 8, 16, 24\}$, a gene value of $2.0$ corresponds to Rank $8$. During fitness evaluation, the vector is decoded with a repair mechanism; continuous genes are used as-is, while index-based genes are rounded to the nearest integer to select the corresponding hyperparameter.
+\noindent A chromosome (candidate solution) is represented as a vector $G = [g_1, g_2, \dots, g_6]$. The learning rate ($g_1$) is encoded directly as a continuous float. The remaining five discrete parameters are encoded as integer indices pointing to a pre-defined list of valid options. For example, if the valid Ranks are $\{2, 4, 8, 16, 24\}$, a gene value of $2.0$ corresponds to Rank $8$. During fitness evaluation, the vector is decoded with a repair mechanism; continuous genes are used as-is, while index-based genes are rounded to the nearest integer to select the corresponding hyperparameter.
 
-The search space was defined as follows:
+\noindent The search space is defined as follows:
 \begin{itemize}
     \item Learning Rate: $[1 \times 10^{-5}, 2 \times 10^{-4}]$
     \item Rank $r$: $\{2, 4, 8, 16, 24\}$
@@ -124,30 +124,30 @@ The search space was defined as follows:
     \item Target Modules: $\{\text{Attention}, \text{Attention+FFN}\}$
 \end{itemize}
 
-We use index-based encoding to ensure uniform exploration across discrete options. For example, a mutation step size of 5 with value-based encoding would have different effects at $rank = 4$ (significant change), as opposed to $rank = 24$ (minimal change). Index-based encoding ensures consistency between irregularly spaced out hyperparameter options. 
+\noindent We use index-based encoding to ensure uniform exploration across discrete options. For example, a mutation step size of 5 with value-based encoding would have different effects at $rank = 4$ (significant change), as opposed to $rank = 24$ (minimal change). Index-based encoding ensures consistency between irregularly spaced out hyperparameter options. 
 
 \subsection{Algorithm 1: RCGA BLX-$\alpha$}
-We propose a Real-Coded Genetic Algorithm (RCGA) for optimising LoRA hyperparameters within a mixed discrete-continuous search space. Unlike standard Binary GAs, which suffer from Hamming cliffs, where small mutations to the bit string can cause drastic changes in parameter values, disrupting the search, RCGA preserves the property of locality. This is crucial for parameters like Rank and Alpha, which possess an ordinal relationship (i.e the categories have a meaningful order but the distance between them is not equal; $r=4 < r=8 < r=16$). By operating in a continuous representation and mapping to the nearest discrete index, the algorithm can exploit local gradients and explore the solution space "between" parents. We can now describe the genetic operators implementing this approach:
+\noindent We propose a Real-Coded Genetic Algorithm (RCGA) for optimising LoRA hyperparameters within a mixed discrete-continuous search space. Unlike standard Binary GAs, which suffer from Hamming cliffs, where small mutations to the bit string can cause drastic changes in parameter values, disrupting the search, RCGA preserves the property of locality. This is crucial for parameters like Rank and Alpha, which possess an ordinal relationship (i.e the categories have a meaningful order but the distance between them is not equal; $r=4 < r=8 < r=16$). By operating in a continuous representation and mapping to the nearest discrete index, the algorithm can exploit local gradients and explore the solution space "between" parents. We can now describe the genetic operators implementing this approach:
 
 \subsubsection{Crossover (BLX-$\alpha$)}
-To balance exploration and exploitation, we utilised the Blend Crossover (BLX-$\alpha$) operator. For two parent genes $x_1$ and $x_2$ (where $x_1 < x_2$), the offspring $y$ is sampled uniformly from the interval:
+\noindent To balance exploration and exploitation, we utilised the Blend Crossover (BLX-$\alpha$) operator. For two parent genes $x_1$ and $x_2$ (where $x_1 < x_2$), the offspring $y$ is sampled uniformly from the interval:
 \begin{equation}
     [x_1 - \alpha(x_2 - x_1), x_2 + \alpha(x_2 - x_1)]
 \end{equation}
 We selected $\alpha = 0.5$, which allows the algorithm to search slightly outside the bounds of the parents, preserving population diversity. For the index-based genes, the resulting floating-point value is clipped to the valid index range and rounded.
 
 \subsubsection{Mutation}
-We applied a random reset mutation with a probability of $0.1$. If a gene is selected for mutation, it is replaced by a new random value sampled uniformly from the initialisation range of that specific parameter.
+\noindent We applied a random reset mutation with a probability of $0.1$. If a gene is selected for mutation, it is replaced by a new random value sampled uniformly from the initialisation range of that specific parameter.
 
 \subsubsection{Selection and Elitism}
 A tournament selection mechanism was used to choose parents for the next generation. To ensure convergence stability, we implemented elitism, where the single best individual from the current generation is copied unchanged to the next generation.
 
-\begin{algorithm}
+\begin{algorithm}[htbp]
 \caption{RCGA with BLX-$\alpha$ Crossover}
 \begin{algorithmic}[1]
 \State \textbf{Input:} Population Size $N$, Generations $G$, $\alpha=0.5$
 \State \textbf{Output:} Best Hyperparameter Vector $x_{best}$
-\State Initialize population $P$ with random real-valued vectors
+\State Initialise population $P$ with random real-valued vectors
 \State Evaluate fitness $f(x)$ for all $x \in P$
 \For{$gen = 1$ to $G$}
     \State $P_{new} \gets \emptyset$
@@ -174,7 +174,7 @@ A tournament selection mechanism was used to choose parents for the next generat
 \end{algorithm}
 
 \subsection{Algorithm 2: SHADE}
-The comparative study by Sen et al.~\cite{Dhar_2023} mentioned in this introduction suggests that Evolutionary Algorithms, particularly Differential Evolution (DE), are an ideal choice for navigating gradient-free search spaces. A notable drawback in standard DE is its sensitivity to the manual selection of its control parameters (Crossover Rate $CR$ and Scaling Factor $F$), such that initialising sub-optimal values for these parameters can lead to undesired convergence rates. We instead adopted an enhanced variant of DE: Success-History based Adaptive Differential Evolution (SHADE). SHADE improves on standard DE by automatically adapting its control parameters, driven by historical success information (a form of elitism). This is critical for hyperparameter optimisation where the optimal exploration-exploitation balance may shift as the search progresses through the fitness landscape.
+\noindent The comparative study by Sen et al.~\cite{Dhar_2023} mentioned in the introduction suggests that Evolutionary Algorithms, particularly DE (Differential Evolution), are an ideal choice for navigating gradient-free search spaces. A notable drawback in standard DE is its sensitivity to the manual selection of its control parameters (Crossover Rate $CR$ and Scaling Factor $F$), such that initialising sub-optimal values for these parameters can lead to undesired convergence rates. We instead adopted an enhanced variant of DE: Success-History based Adaptive Differential Evolution (SHADE). SHADE improves on standard DE by automatically adapting its control parameters, driven by historical success information (a form of elitism). This is critical for hyperparameter optimisation where the optimal exploration-exploitation balance may shift as the search progresses through the fitness landscape.
 
 Thoughtful considerations regarding the computational expense of training transformer models (approximately 3-5 minutes per evaluation) were carried out, leaving us with a severely constrained optimisation budget (100 evaluations). However, SHADE's adaptive mechanism allows it to learn from successful parameter combinations, and focus computational resources more effectively compared to random or grid search approaches. 
 
@@ -188,7 +188,7 @@ Furthermore, SHADE maintains an external archive of recently replaced solutions,
 \State \textbf{Input:} $N=20$ (pop size), $H=20$ (memory size), $G_{max}=5$, $arc\_rate=1.0$, $p=0.4$
 
 \vspace{0.5em}
-\State \textbf{Initialize:}
+\State \textbf{Initialise:}
 \State $M_{CR}, M_F = [0.5]\times H$ \texttt{// historical parameter memories}
 \State $Archive = \emptyset, k = 0$
 \State $P = \{\text{random individuals}\}$, evaluate all, track $x_{best}$
@@ -253,8 +253,7 @@ SHADE has demonstrated superior performance on the CEC2014 benchmark suite and v
 \section{Experimental Results}
 \subsection{Experimental Setup \& Parameter Ranges}
 
-
-We first initialise a population of candidates with random configurations of indices mapped to a specific set of LoRA hyperparameters we decide on. The fitnesses of these individuals are then calculated by obtaining the validation accuracy after training DistilBERT for 3 epochs. The following process outlines the method of evaluation:
+\noindent We first initialise a population of candidates with random configurations of indices mapped to a specific set of LoRA hyperparameters we decide on. The fitnesses of these individuals are then calculated by obtaining the validation accuracy after training DistilBERT for 3 epochs. The following process outlines the method of evaluation:
 
 \begin{enumerate}
     \item Decode the index vector x into LoRA hyperparameters via a repair function
@@ -265,14 +264,11 @@ We first initialise a population of candidates with random configurations of ind
     \item Return validation accuracy as fitness (maximisation objective)
 \end{enumerate}
 
-All algorithms are initialised with a population of 20 with individuals being evaluated at the start. Offsprings and updates are generated from the starting population and undergo four generational updates, totalling for 100 evaluations. We have chosen these small values (relative to literature) for population and generations as the search space itself has been constrained due to the computational intensiveness of the task at hand. Three epochs are used during training for all algorithms to reinforce fairness, and limit evaluation time. P100 GPUs are used in training for their speed and availability. Finally, the top five configurations are taken from each algorithm and are trained on three unique seeds. The results shown on Table ~\ref{tab:shade_comparison} and Table ~\ref{tab:params} are from the best performing configuration of each algorithm.
-
-
-\textbf{Algorithm Parameter Ranges:}
+\noindent All algorithms are initialised with a population of 20 with individuals being evaluated at the start. Offsprings and updates are generated from the starting population and undergo four generational updates, totalling for 100 evaluations. We have chosen these small values (relative to literature) for population and generations as the search space itself has been constrained due to the computational intensiveness of the task at hand. Three epochs are used during training for all algorithms to reinforce fairness, and limit evaluation time. P100 GPUs are used in training for their speed and availability. Finally, the top five configurations are taken from each algorithm and are trained on three unique seeds. The results shown on Table ~\ref{tab:shade_comparison} and Table ~\ref{tab:params} are from the best performing configuration of each algorithm.
 
 \begin{table}[htbp]
     \centering
-    \caption{Algorithm Parameters}
+    \caption{Algorithm Parameter Ranges}
     \label{tab:params}
     \begin{tabular}{ll}
     \hline
@@ -285,11 +281,10 @@ All algorithms are initialised with a population of 20 with individuals being ev
     \end{tabular}
 \end{table}
 
-For PSO, $w$ controls velocity momentum while $c_1$ and $c_2$ are used for cognitive and social learning respectively. In RCGA BLX-$\alpha$, $\alpha$ defines the exploration range beyond parent bounds, with mutation applied to individual hyperparameters. SHADE adapts its parameters using a history of size $H$, maintains an archive of inferior solutions scaled by the archive rate, and an individual from the top $p_{\text{best}}$ fraction of the population is used to help create a mutant vector.
+\noindent For PSO, $w$ controls velocity momentum while $c_1$ and $c_2$ are used for cognitive and social learning respectively. In RCGA BLX-$\alpha$, $\alpha$ defines the exploration range beyond parent bounds, with mutation applied to individual hyperparameters. SHADE adapts its parameters using a history of size $H$, maintains an archive of inferior solutions scaled by the archive rate, and an individual from the top $p_{\text{best}}$ fraction of the population is used to help create a mutant vector.
 
 \section{Results and Key Findings}
-The experimental set up comprises of 4 metaheuristic algorithms; The baseline 20-trial random search, the population based PSO, and two chosen algorithms, RCGA BLX-alpha and SHADE.
-
+\noindent The experimental set up comprises of 4 metaheuristic algorithms; The baseline 20-trial random search, the population based PSO, and two chosen algorithms, RCGA BLX-alpha and SHADE.
 
 \begin{figure}[htbp]
     \centering
@@ -344,7 +339,7 @@ The experimental set up comprises of 4 metaheuristic algorithms; The baseline 20
     \label{fig:convergence_plot}
 \end{figure}
 
-Convergence Analysis:
+\noindent Convergence Analysis:
 All four algorithms converged to values for learning rate (0.0002) and target modules (attention + feedforward), suggesting that these represent ideal optima within the search space. Similarly, the meta-heuristic methods identified alpha=96 and dropout=0.0 as optimal, while Random Search resolved at suboptimal values (alpha=64, and dropout=0.1). This is likely due to its limited smaller evaluation budget of 20 evaluations, compared to 100 for the meta-heuristic algorithms. The most notable difference occurred in the rank parameter. SHADE and RCGA BLX-Alpha discovered higher rank values of 24 and 16 respectively, which could correlate with their marginally better performance. PSO converged to rank=4, suggesting that its velocity based updates were less effective at escaping the local region compared to the mutation based exploration of SHADE and RCGA. All metaheuristic methods rejected dropout regularisation. This could potentially be because the 3 epoch training loop for evaluations is too short for overfitting to occur; leading to the benefit of dropout regularisation not being able to manifest.  
 
 The clearest connection from these results was that the more trainable parameters that are available, the better the model performs. This is shown in the two best metaheuristic algorithms converging to a higher rank, and all top configurations of the four algorithms selecting both attention heads and feed forward layers as the target modules for LoRA's application, greatly increasing the number of trainable parameters. Another interesting find is the scaling factor alpha being the highest possible value. This shows that the LoRA adapted weights having a very high influence compared to DistilBERTs pre-trained knowledge (weights), is crucial for greater performance. 
@@ -375,9 +370,12 @@ Computational Efficiency: SHADE achieved comparable RCGA BLX-Alpha; 0.897 vs. 0.
 \section{Multi-objective Extension}
 \noindent In this section, we explore the use of multi-objective evolutionary algorithms to determine the optimal trade-off boundary between validation accuracy and model complexity (measured by trainable parameters) for the LoRA adaptation of DistilBERT. We opted for the Non-dominated Sorted Genetic Algorithm II (NSGA-II), proposed by Deb et al.~\cite{nsga2}, as it provides computational efficiency in bi-objective problems through its fast non-dominated sorting mechanism ($O(MN^2)$). Furthermore, its elitist strategy means that optimal hyperparameter configurations are not lost through stochastic selection processes, but are rather passed onto the next generation. This ensures monotonic improvement in the Pareto front.
 
-Another Pareto front-based multi-objective algorithm worth discussing is the Strength Pareto Evolutionary Algorithm 2 (SPEA2), which utilises a k-th nearest neighbour approach to guide the search process. Similarly, SPEA2 demonstrates elitism much like NSGA-II, but by employing a fixed-size external archive system. The archive is updated per generation by ensuring non-dominant solutions are kept to be used to create new offspring. While SPEA2 is a strong candidate for approaching the LoRA hyperparameter optimisation problem, it is more strongly suited for problems with 3 or more objectives--evident from Zitzler et al's paper when comparing SPEA2 and NSGA-II. As the result of the additional nearest neighbour calculations, that is, the euclidean distance calculations between each individual before sorting them, we face an increased computational complexity of $O(M^3)$ (or in some cases, $O(M^2logM)$) where $M$ is $population\_size + archive\_size$.~\cite{spea2}
+Another Pareto front-based multi-objective algorithm worth discussing is SPEA2 (Strength Pareto Evolutionary Algorithm 2), which utilises a k-th nearest neighbour approach to guide the search process. Similarly, SPEA2 demonstrates elitism much like NSGA-II, but by employing a fixed-size external archive system. The archive is updated per generation by ensuring non-dominant solutions are kept to be used to create new offspring. While SPEA2 is a strong candidate for approaching the LoRA hyperparameter optimisation problem, it is more strongly suited for problems with 3 or more objectives--evident from Zitzler et al's paper when comparing SPEA2 and NSGA-II. As the result of the additional nearest neighbour calculations, that is, the euclidean distance calculations between each individual before sorting them, we face an increased computational complexity of $O(M^3)$ (or in some cases, $O(M^2logM)$) where
+\begin{equation}
+M=population\_size + archive\_size
+\end{equation}.~\cite{spea2}
 
-We use the same LoRA hyperparameter configurations as those in the other algorithms discussed in sections 3, with the evolutionary parameters also unchanged (population size $P=20$ and generations $G=5$), matching the exact search space and evaluations to ensure fairness. While the chosen single-objective algorithms focused on maximising validation accuracy, the complexity of the resultant neural architectures did not contribute to selection pressure. In other words, these algorithms favour models with higher accuracy, regardless of over-parametrisation. For example, one LoRA configuration could produce an accuracy of 85.0\% with $rank=4$ and $\#trainable\_params=600,000$, resulting in low training cost. Another configuration could produce an accuracy of 85.1\% with $rank=24$ and $\#trainable\_params=2,000,000$, in which the training cost has significantly increased, but this cost is insignificant to single-objective algorithms and it will only select the model configuration with higher accuracy (85.1\% $>$ 85.0\%). Therefore, we can justify the need to introduce parameter efficiency as a primary optimisation goal alongside accuracy.
+We use the same LoRA hyperparameter configurations as those in the other algorithms discussed in sections 3, with the evolutionary parameters also unchanged (population size $P=20$ and generations $G=5$), matching the exact search space and evaluations to ensure fairness. While the single-objective algorithms discussed in this paper focus on maximising validation accuracy, the complexity of the resultant neural architectures does not contribute to selection pressure. In other words, these algorithms favour models with higher accuracy, regardless of over-parametrisation. For example, one LoRA configuration could produce an accuracy of 85.0\% with $rank=4$ and $\#trainable\_params=600,000$, resulting in low training cost. Another configuration could produce an accuracy of 85.1\% with $rank=24$ and $\#trainable\_params=2,000,000$, in which the training cost has significantly increased, but this cost is insignificant to single-objective algorithms and it will only select the model configuration with higher accuracy (85.1\% $>$ 85.0\%). Therefore, we can justify the need to introduce parameter efficiency as a primary optimisation goal alongside accuracy.
 
 Figure ~\ref{fig:pareto_front} presents the Pareto front procured from the NSGA-II optimisation process, plotting validation accuracy against the number of trainable parameters.
 
@@ -418,10 +416,12 @@ The front path displays a steep vertical ascent as the number of trainable param
 
 The knee point becomes visible at approximately 0.72M parameters, representing the most efficient trade-off in the search space as it approaches the peak accuracy. At this point the model size is roughly a third smaller than the largest Pareto solution.
 
-As the front path exceeds the knee point, the curve plateaus, converging to the maximum accuracy. During this stage, it can be observed that achieving a final 2\% gain in accuracy requires a costly increase of nearly 53\% in trainable parameters. 
+As the front path exceeds the knee point, the curve plateaus, converging to maximum accuracy. During this stage, it can be observed that achieving a final 2\% gain in accuracy requires a costly increase of nearly 53\% in trainable parameters. 
 
 This analysis suggests that the LoRA hyperparameter optimisation problem benefits significantly from multi-objective optimisation algorithms. In contrast to single-objective optimisation algorithms, which have no mechanism to penalise model complexity and tend to select high-capacity configurations for marginal accuracy gains, multi-objective optimisation algorithms can penalise high model-complexity. This strategy ensures smooth convergence towards the 'knee point' of the Pareto front, eventually achieving optimal efficiency by avoiding the selection of over-parametrised LoRA configurations. Ultimately, treating the number of training parameters and validation accuracy as conflicting objectives, introduces a dimension of efficiency to the model selection process that would otherwise be ignored by single-objective algorithms.
 
+\section{Conclusion and Future Work}
+\noindent 
 \bibliographystyle{IEEEtran}
 \bibliography{references}
 Due to the nature of the components of this coursework being inseparable, all the group members have agreed to contribute equally in all components. Therefore, each group member has had a significant impact on all graded sections of this work.
